--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Super GirlS @ Foss Foundation</h1>
+                <h1 id="homeHeading">Super Girls @ Foss Foundation</h1>
                 <hr>
-                <p>It's Time For Girls To Form A Team & Build The Real Tech Stuff. An Initiative To Bring The Best Out Of You.</p>
+                <p>It's Time For Girls To Form A Team & Build The Real Tech Stuff. <br />An Initiative To Bring The Best Out Of You.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -83,9 +83,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Open Source technologies are Free to use, modify & distribute.</h2>
+                    <i class="fa fa-4x fa-linux"></i>
+                    <h2 class="section-heading">Open Source technologies are Free to <br />Use, Modify & Distribute.</h2>
                     <hr class="light">
-                    <p class="text-faded">We have made it free to Learn.</p>
+                    <p class="text-faded">We have made it <b>Free</b> to Learn.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Know more!</a>
                 </div>
             </div>
@@ -119,14 +120,14 @@
                 </div> -->
                 <div class="col-lg-6 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>1. Resume basis<br>2. Interview(PI)</h3>
+                        <i class="fa fa-4x fa-file-text text-primary sr-icons"></i>
+                        <h3>&nbsp;&nbsp;1. Resume Basis<br />2. Interview(PI)</h3>
                      <!--   <p class="text-muted">We update dependencies to keep things fresh.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-users text-primary sr-icons"></i>
                         <h3>Limited Seats<br>(Only 6-10)</h3>
 <!--                        <p class="text-muted">You have to make your websites with love these days!</p> -->
                     </div>
@@ -241,14 +242,14 @@
             			<div class="row">
               			<div class="col-lg-6 col-md-6 text-center">
                     	<div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-user text-primary sr-icons"></i>
                         	<h3>Interpersonal Skills</h3>
-                        	<p class="text-muted">Smart & Hardworking ; Confident & Dedicated ; Motivation of Sharing Knowledge ; No Selfish Nature ; No College/Exams/Marks Fear</p>
+                        	<p class="text-muted">Smart & Hardworking ; Confident & Dedicated ; Belief in Self Learning ; Motivation of Sharing Knowledge ; No Selfish Nature ; No College/Exams/Marks Fear</p>
                     	</div>
                 		</div>
 										<div class="col-lg-6 col-md-6 text-center">
                     	<div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-desktop text-primary sr-icons"></i>
                         	<h3>Technical Skills</h3>
                         	<p class="text-muted">Creative Mind ; Good Knowledge Of Computers ; Programming Skills (any one language) ; Knowledge of Oops/Data Structures/Algorithms will be Bonus</p>
                     	</div>
@@ -266,7 +267,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Interested Girls mailto: anonyxhappie@fossfoundation.com with mail subject 'SuperGirls', on or before 12th April,17.</p>
+                    <p>Interested Girls mailto: info@fossfoundation.com<br />with mail subject 'SuperGirls', on or before 17th April, 17.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
