--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,7 +72,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Super Girls @ Foss Foundation</h1>
+                <h1 id="homeHeading">Super Girls @ <a href="http://fossfoundation.com">Foss Foundation</a></h1>
                 <hr>
                 <p>It's Time For Girls To Form A Team & Build The Real Tech Stuff. <br />An Initiative To Bring The Best Out Of You.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
