--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Akshit Sharma">
 
-    <title>Super Girls - Foss Foundation</title>
+    <title>SuperGirls - FossFoundation</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Super Girls</a>
+                <a class="navbar-brand page-scroll" href="#page-top">SuperGirls</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,7 +72,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Super Girls @ <a href="http://fossfoundation.com">Foss Foundation</a></h1>
+                <h1 id="homeHeading">SuperGirls @ <a href="http://fossfoundation.com">FossFoundation</a></h1>
                 <hr>
                 <p>It's Time For Girls To Form A Team & Build The Real Tech Stuff. <br />An Initiative To Bring The Best Out Of You.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
@@ -137,7 +137,42 @@
         </div>
     </section>
 
- <!--   <section class="no-padding" id="portfolio">
+ 
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>What We'll See In You?</h2>
+					<hr>			
+								<div class="container">
+            			<div class="row">
+              			<div class="col-lg-6 col-md-6 text-center">
+                    	<div class="service-box">
+                        <i class="fa fa-4x fa-user text-primary sr-icons"></i>
+                        	<h3>Interpersonal Skills</h3>
+                        	<p class="text-muted">Smart & Hardworking ; Confident & Dedicated ; Belief In Self Learning ; Motivation Of Sharing Knowledge ; No Selfish Nature ; No College/Exams/Marks Fear</p>
+                    	</div>
+                		</div>
+						<div class="col-lg-6 col-md-6 text-center">
+                    	<div class="service-box">
+                        <i class="fa fa-4x fa-desktop text-primary sr-icons"></i>
+                        	<h3>Technical Skills</h3>
+                        	<p class="text-muted">Creative Mind ; Good Knowledge Of Computers ; Programming Skills (Any One Language) ; Knowledge Of Oops/Data Structures/Algorithms Will Be Bonus</p>
+                    	</div>
+                		</div>
+						</div>
+						</div>
+               <!-- <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a> -->
+            </div>
+        </div>
+    </aside>
+
+    <div class="bg-dark ">
+        <div class="container text-center">
+                <h2>Individual Requirements</h2>
+                <hr>
+        </div>
+    </div>
+  <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
@@ -146,10 +181,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    1.
                                 </div>
                                 <div class="project-name">
-                                    Super Girls
+                                    Updated With Events & OpenSource Technologies
                                 </div>
                             </div>
                         </div>
@@ -161,10 +196,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    2.
                                 </div>
                                 <div class="project-name">
-                                    Super Girls
+                                    Good At Code Design, Programming & Algorithms
                                 </div>
                             </div>
                         </div>
@@ -176,10 +211,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    3.
                                 </div>
                                 <div class="project-name">
-                                    Super Girls
+                                    Web Dev & Creative Designing
                                 </div>
                             </div>
                         </div>
@@ -191,10 +226,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    4.
                                 </div>
                                 <div class="project-name">
-                                    Super Girls
+                                    Ideater, App & Software Dev, Able To Relate Real Life With Computers
                                 </div>
                             </div>
                         </div>
@@ -206,10 +241,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    5.
                                 </div>
                                 <div class="project-name">
-                                    Super Girls
+                                    System & Network Expert
                                 </div>
                             </div>
                         </div>
@@ -221,10 +256,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    6.
                                 </div>
                                 <div class="project-name">
-                                    Super Girls
+                                    Marketing & Business Expert
                                 </div>
                             </div>
                         </div>
@@ -232,35 +267,58 @@
                 </div>
             </div>
         </div>
-    </section> -->
-
+    </section> 
+    <div class="bg-primary">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <h4> | It's Okay If You Don't Have These Skills, Still Give A Try, We May Consider | </h4>
+                </div>
+        </div> 
+    </div>
+    
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>What we'll see in you.</h2>
-								
-								<div class="container">
-            			<div class="row">
-              			<div class="col-lg-6 col-md-6 text-center">
-                    	<div class="service-box">
-                        <i class="fa fa-4x fa-user text-primary sr-icons"></i>
-                        	<h3>Interpersonal Skills</h3>
-                        	<p class="text-muted">Smart & Hardworking ; Confident & Dedicated ; Belief in Self Learning ; Motivation of Sharing Knowledge ; No Selfish Nature ; No College/Exams/Marks Fear</p>
-                    	</div>
-                		</div>
-										<div class="col-lg-6 col-md-6 text-center">
-                    	<div class="service-box">
-                        <i class="fa fa-4x fa-desktop text-primary sr-icons"></i>
-                        	<h3>Technical Skills</h3>
-                        	<p class="text-muted">Creative Mind ; Good Knowledge Of Computers ; Programming Skills (any one language) ; Knowledge of Oops/Data Structures/Algorithms will be Bonus</p>
-                    	</div>
-                		</div>
-									</div>
-							</div>
+                <h2>Few Things More To Know</h2>
+                    <hr>            
+                        <div class="container">
+                        <div class="row">
+                        <div class="col-lg-6 col-md-6 text-center">
+                        <div class="service-box">
+                        <i class="fa fa-4x fa-terminal text-primary sr-icons"></i>
+                            <h3>What You'll Do When Selected?</h3>
+                            <ul>
+                            <li>Implementation Of Good Projects</li>
+                            <li>Participation In TechEvents & Hackathons</li>    
+                            <li>Team Will Learn & Work On Opensource Technologies</li>
+                            </ul>
+                        </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 text-center">
+                        <div class="service-box">
+                        <i class="fa fa-4x fa-server text-primary sr-icons"></i>
+                            <h3>What We'll Provide?</h3>
+                            <ul>
+                            <li>Full Time Guidance</li>
+                            <li>Certificates And Prizes On Achievements</li>
+                            <li>Free Professional Classes On Required Topics</li>
+                            </ul>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
                <!-- <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a> -->
             </div>
         </div>
     </aside>
+
+    <div class="bg-primary">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <h4> | May Be We Could Mention Just A Few, Lot Many More To Go . . . | </h4>
+                </div>
+        </div> 
+    </div>
 
     <section id="contact">
         <div class="container">
@@ -270,9 +328,17 @@
                     <hr class="primary">
                     <p>Interested Girls mailto: info@fossfoundation.com<br />with mail subject 'SuperGirls', on or before 17th April, 17.</p>
                 </div>
+
+                <!--div class="col-sm-8 col-sm-offset-2 text-center">
+                    <h4>Send your Resume more Qualitative rather than focusing on Quantity. Don't forget to mention both Interpersonal and Technical Skills in Resume</h4>
+                </div>
+                <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <h4>Selected candidates will get reply mail for the Interview within next 3 days</h4>
+                </div-->
+1
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>987-247-2565</p>
+                    <p><a href="tel:9872472565">+91-987-247-2565</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
