--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <i class="fa fa-4x fa-linux"></i>
-                    <h2 class="section-heading">Open Source technologies are Free to <br />Use, Modify & Distribute.</h2>
+                    <h2 class="section-heading">Open Source Technologies Are Free To <br />Use, Modify & Distribute.</h2>
                     <hr class="light">
-                    <p class="text-faded">We have made it <b>Free</b> to Learn.</p>
+                    <p class="text-faded">We Have Made It <b>Free</b> To Learn.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Know more!</a>
                 </div>
             </div>
